--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ select = ["C", "E", "F", "I", "W"]
 
 [tool.ruff.lint.isort]
 lines-after-imports = 2
-known-first-party = ["ggmc"]
+known-first-party = ["stmc"]
 
 [tool.ruff.format]
 # Like Black, use double quotes for strings.
